objects/HPD_Total_Setting__mdt.object
<CustomObject>
    <description>Contains configurable parameters for HPD Totals Aggregation. (Nightly batch jobs that use SOQL aggregation to rollup data to Hold Per Day Total from Hold Per Data.</description>
    <fields>
        <fullName>Account_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Account Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_HPD_Total_Avg_on_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display HPD Total Avg on Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HPD_Account_Types__c</fullName>
        <defaultValue>&quot;Accel Account,Competitor Account&quot;</defaultValue>
        <label>HPD Account Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Daily_HPD_Upload_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Last Daily HPD Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Addresses__c</fullName>
        <defaultValue>&apos;rick@chicagosalesforceconsulting.com&apos;</defaultValue>
        <description>Email addresses for Scheduled Batch Jobs to notify of the results.</description>
        <inlineHelpText>Email addresses for Scheduled Batch Jobs to notify of the results.</inlineHelpText>
        <label>Notification Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Dev_Name_To_Process__c</fullName>
        <label>Record Type Dev Name To Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HPD Total Setting</label>
    <pluralLabel>HPD Total Settings</pluralLabel>
</CustomObject>